# libinput2

./: CMakeLists.txt  Makefile  Makefile.inc  input.h  libinput-private.h  libinput-util.c  libinput-util.h  libinput.c  libinput.h  libinput.pc.in  wscons.c  wskbdmap.c
include/linux/: input.h
